# fiman

./: .travis.yml  CMakeLists.txt  README.md
include/fiman/: exceptions.h  fiman.h  tools.h
resource/: example.yaml  iason.tree  template.tree
src/: fiman.cpp  fiman_terminal.cpp  main.cpp  tools.cpp
